--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
+    "next-with-error": "^1.2.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
