--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "framer-motion": "^5.5.5",
+    "mongodb": "^4.2.2",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "next-with-error": "^1.2.0",
+    "node-fetch": "^3.1.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
