--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.1",
     "framer-motion": "^5.5.5",
     "mongodb": "^4.2.2",
     "next": "12.0.7",
