--- a/src/themes/default/pages.yml
+++ b/src/themes/default/pages.yml
@@ -1,10 +1,5 @@
 # Don't touch this unless you know what you are doing.
 
-index: login.ejs
-nopermission: nopermission.ejs
-notfound: 404.ejs
-renderfail: rendererror.ejs
-
 pages:
   login:
     file: login.ejs
@@ -19,6 +14,10 @@ pages:
     permission: 0
     type: ejs
   error403:
-    file: 404.ejs
+    file: 403.ejs
+    permission: 0
+    type: ejs
+  renderError:
+    file: 500.ejs
     permission: 0
     type: ejs
