--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "dashactyl-v2",
+  "version": "1.0.0",
+  "main": "src/app.js",
+  "private": true,
+  "repository": "https://github.com/Votion-Development/Dashactyl-v2.git",
+  "author": "Jamie_ <volcanomonster07@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.1",
     "connect-mongodb-session": "^3.1.1",
@@ -12,12 +19,6 @@
     "node-fetch": "v2",
     "path": "^0.12.7"
   },
-  "name": "dashactyl-v2",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/Votion-Development/Dashactyl-v2.git",
-  "author": "Jamie_ <volcanomonster07@gmail.com>",
-  "license": "MIT",
   "devDependencies": {
     "eslint": "^8.5.0"
   }
