--- a/src/themes/default/pages.yml
+++ b/src/themes/default/pages.yml
@@ -5,12 +5,12 @@ pages:
     file: home.ejs
     permission: 0
     type: ejs
-  
+
   login:
     file: login.ejs
     permission: 0
     type: ejs
-  
+
   dashboard:
     file: dashboard.ejs
     permission: 1
@@ -20,20 +20,25 @@ pages:
     file: create_server.ejs
     permission: 1
     type: ejs
-  
+
   error404:
     file: 404.ejs
     permission: 0
     type: ejs
-  
+
   error403:
     file: 403.ejs
     permission: 0
     type: ejs
-  
+
   error500:
     file: 500.ejs
     permission: 0
+    type: ejs
+
+  store:
+    file: store.ejs
+    permission: 1
     type: ejs
 
   admin:
