--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/Votion-Development/Dashactyl-v2.git",
   "author": "Jamie_ <volcanomonster07@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node .",
+    "dev": "nodemon ./src/app"
+  },
   "dependencies": {
     "body-parser": "^1.19.1",
     "connect-mongodb-session": "^3.1.1",
@@ -20,6 +24,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "eslint": "^8.5.0"
+    "eslint": "^8.5.0",
+    "nodemon": "^2.0.15"
   }
 }
